--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.3",
     "react-icons": "^4.11.0",
-    "react-router-dom": "^6.17.0"
+    "react-router-dom": "^6.17.0",
+    "react-top-loading-bar": "^2.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
