--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.15.0",
     "@mui/x-data-grid": "^6.18.5",
+    "@tinymce/tinymce-react": "^4.3.2",
     "antd": "^5.10.1",
     "axios": "^1.6.2",
     "react": "^18.2.0",
