--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@mui/x-data-grid": "^6.18.5",
     "@tinymce/tinymce-react": "^4.3.2",
     "antd": "^5.10.1",
-    "axios": "^1.6.2",
+    "axios": "^1.7.2",
+    "file-saver": "^2.0.5",
     "jwt-decode": "^4.0.0",
+    "pdf-lib": "^1.17.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.3",
