--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.15.0",
+    "@mui/x-charts": "^7.11.1",
     "@mui/x-data-grid": "^6.18.5",
     "@tinymce/tinymce-react": "^4.3.2",
     "antd": "^5.10.1",
